--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@clerk/clerk-react": "^5.31.1",
     "@tailwindcss/vite": "^4.1.5",
     "humanize-duration": "^3.32.1",
     "quill": "^2.0.3",
