--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@clerk/clerk-react": "^5.31.1",
     "@tailwindcss/vite": "^4.1.5",
     "axios": "^1.9.0",
+    "framer-motion": "^12.15.0",
     "humanize-duration": "^3.32.1",
     "quill": "^2.0.3",
     "rc-progress": "^4.0.0",
