--- a/server/package.json
+++ b/server/package.json
@@ -21,7 +21,8 @@
     "mongoose": "^8.14.3",
     "multer": "^1.4.5-lts.2",
     "nodemon": "^3.1.10",
-    "razorpay": "^2.9.6", 
+    "razorpay": "^2.9.6",
+    "streamifier": "^0.1.1",
     "svix": "^1.42.0"
   }
 }
